# powerMonitor-esp32

./: .gitignore  README.md  power-meter.py
esp32_power-monitor/: CMakeLists.txt  sdkconfig
esp32_power-monitor/main/: app_main.c
firmware/common_components/custom_common/: CMakeLists.txt  config_types.h  mqtt_helper.c  mqtt_helper.h  powermon_task.c  powermon_task.h  wifi_helper.c  wifi_helper.h
firmware/common_components/pzem004tv3/: pzem004tv3.c  pzem004tv3.h
firmware/esp32_hak/main/: app_main.c
firmware/esp32_hobelboden/main/: app_main.c
firmware/esp32_neue-schupfe/main/: app_main.c
firmware/esp32_schupfe/: CMakeLists.txt  sdkconfig
firmware/esp32_schupfe/main/: app_main.c  credentials.h.dist
hardware/UART-RS485_interface-board/: UART-RS485_interface-board.kicad_pcb  UART-RS485_interface-board.kicad_pro  UART-RS485_interface-board.kicad_sch
